# kemper

./: LightClock.md  ProjectHome.md  master.gan
circuits/kemper_lib/: Kemper-DigitalIC.lbr  Kemper-ElectroMechanical.lbr
circuits/lightclock.0/: eagle.epf  lightclock.0.GBL  lightclock.0.GBO  lightclock.0.GBP  lightclock.0.GBS  lightclock.0.GML  lightclock.0.GTL  lightclock.0.GTO  lightclock.0.GTS  lightclock.0.TXT  lightclock.0.brd  lightclock.0.sch
class_notes/: me533.lyx
class_notes/me531/: hw2.m  hw2_1.m  hw2_2.m  me.m  me2.m  me531.lyx  me531_11_29.m
class_notes/me531/final/: final_mathematica.nb  main.m
class_notes/me531/final/functions/: createSysMats.m  partB.m  partD.m  partF.m
class_notes/me532/: ME532_main.aux  ME532_main.tex  me532.lyx  minmax.tex  optcontrol.tex  optcontrol_part1.tex  optcontrol_part2.tex  optimization.tex
course_work/me532/: hw1.lyx
course_work/me532/lab1/: eval_PI.m  lab1.m  mass_spring_ode.m
course_work/me532/lab2/: lab2.m  smd_model.asv
course_work/me532/project/: kemperME532.tex  me532_project.lyx
course_work/me532/project/equations/: equations_catch_only_k.lyx  equations_catch_tauL.lyx  equations_system_catch.lyx  math.lyx
course_work/me532/project/matlab/: catch_LQR3.m  catch_LQR_lim.m  catch_LQR_z.m  catch_controlled.m  plotAll.m
course_work/me533/: hw1.lyx  hw1.m  midterm.lyx
course_work/me533/final/: final.lyx  prob3_2.m  prob4_2.m
course_work/me533/midterm/: midterm.lyx
course_work/me537/hw1/: hw1_eta.m  hw1_hidden.m
course_work/me537/hw1/latex/: hw1.tex
course_work/me537/hw1/src/: UpdateGraphics.java  hw1.java
course_work/me537/hw2/: evoData.m  hw2_sa_10.m  hw2_sa_100.m
course_work/me537/hw2/input/: T10  T20A
course_work/me537/hw2/src/: NNetwork.java  NNnode.java  hw2.java
course_work/me537/hw3/input/: slot_parms.txt
course_work/me537/hw3/latex/: Makefile
course_work/me537/hw3/matlab/: gridGreedyData.m  plotHits.m
course_work/me537/hw3/src/: hw3.java
course_work/me537/ode_tests/simple_ball_fall/: Makefile
course_work/me537/opencv_tests/avetest/: makefile
course_work/me537/opencv_tests/camteset/: camtest.c
course_work/me537/opencv_tests/flowtest/: makefile
course_work/me537/opencv_tests/nnet/: main.cpp  makeVideo.m  net.h  node.h
course_work/me537/opencv_tests/splittest/: makefile
course_work/me537/project/draft/: Makefile
course_work/me537/project/figures/: expert.avi
course_work/me537/project/papers/: me537.bib.bak
course_work/me537/project/presentation/: beamercolorthemeDRL.sty  (+1 more)
course_work/me537/ros_tests/ros_rviz_ode_basic_working/diff_drive_simulation/: CMakeLists.txt  mainpage.dox
research_notes/: general_notes.lyx
trunk/: master.gan
trunk/circuits/kemper_lib/: Kemper-Connectors.lbr  Kemper-DigitalIC.lbr  Kemper-Passives.lbr
trunk/circuits/lightclock.0/: eagle.epf  lightclock.0.GTP  lightclock.0.brd  lightclock.0.sch
trunk/class_notes/me531/: hw2.lyx
trunk/class_notes/me532/: LQR_full.tex  ME532_main.blg  Makefile  comp.tex  introduction.tex  lqr.tex  minmax.lyx  notation.tex
trunk/course_work/me533/: quick_notes.lyx
trunk/course_work/me537/project/simulation/ros_packages/super_nn/: CMakeLists.txt
trunk/course_work/me537/project/simulation/ros_packages/super_nn/src/: controller_main.cpp  evo_supervised_learner.cpp  teleop.h
wiki/: LightClock.wiki
(+165 files in other folders)
